style/fix: make overflow visible in modal

--- a/src/common/floq/components/FloqModal/styles.module.scss
+++ b/src/common/floq/components/FloqModal/styles.module.scss
@@ -18,7 +18,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   max-height: 100%;
-  overflow-y: auto;
+  overflow-y: visible;
   padding: $half-spacing;
 
   background-color: $blank-white;
